Add: NewGotin 🏙️adn Fix: Navbar text 💬

--- a/diseno.html
+++ b/diseno.html
@@ -28,7 +28,7 @@
                     <a href="proposito.html" class="nav-link">Propósito</a>
                     <a href="diseno.html" class="nav-link active">Diseño</a>
                     <a href="marca.html" class="nav-link">Nosotros</a>
-                    <a href="estrategias.html" class="nav-link">EStrategias</a>
+                    <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -167,69 +167,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Galería de Modelos -->
-        <section class="models">
-            <div class="container">
-                <h2>Nuestros Modelos</h2>
-
-                <div class="models-grid">
-                    <div class="model-card bg-yellow">
-                        <div class="model-image">
-                            <img src="img/placeholder.svg" alt="Modelo Básico">
-                        </div>
-                        <div class="model-content">
-                            <h3>Modelo Básico</h3>
-                            <p>
-                                Ideal para escuelas primarias, con altura ajustable y sistema de filtración estándar.
-                            </p>
-                            <ul class="model-features">
-                                <li><span class="check-icon green">✓</span> Capacidad: 100 estudiantes</li>
-                                <li><span class="check-icon green">✓</span> Filtración de 2 etapas</li>
-                                <li><span class="check-icon green">✓</span> Refrigeración básica</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="model-card bg-light-blue">
-                        <div class="model-image">
-                            <img src="img/placeholder.svg" alt="Modelo Avanzado">
-                        </div>
-                        <div class="model-content">
-                            <h3>Modelo Avanzado</h3>
-                            <p>
-                                Perfecto para escuelas secundarias, con mayor capacidad y filtración avanzada.
-                            </p>
-                            <ul class="model-features">
-                                <li><span class="check-icon turquoise">✓</span> Capacidad: 250 estudiantes</li>
-                                <li><span class="check-icon turquoise">✓</span> Filtración de 4 etapas</li>
-                                <li><span class="check-icon turquoise">✓</span> Refrigeración avanzada</li>
-                                <li><span class="check-icon turquoise">✓</span> Monitoreo básico</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="model-card bg-coral">
-                        <div class="model-image">
-                            <img src="img/placeholder.svg" alt="Modelo Premium">
-                        </div>
-                        <div class="model-content">
-                            <h3>Modelo Premium</h3>
-                            <p>
-                                Diseñado para instituciones grandes, con todas las características avanzadas.
-                            </p>
-                            <ul class="model-features">
-                                <li><span class="check-icon orange">✓</span> Capacidad: 500+ estudiantes</li>
-                                <li><span class="check-icon orange">✓</span> Filtración de 6 etapas</li>
-                                <li><span class="check-icon orange">✓</span> Refrigeración premium</li>
-                                <li><span class="check-icon orange">✓</span> Monitoreo inteligente completo</li>
-                                <li><span class="check-icon orange">✓</span> Sistema anti-bacteriano avanzado</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <!-- Footer -->
@@ -240,7 +177,7 @@
                 <div class="footer-info">
                     <a href="index.html" class="footer-logo">
                         <div class="logo-image">
-                            <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                            <img src="img/logoBN.png" alt="Aguita Chida Logo">
                         </div>
                     </a>
                     <p class="address">
