--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="proposito.html" class="nav-link">Propósito</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
                     <a href="marca.html" class="nav-link">Nosotros</a>
-                    <a href="estrategias.html" class="nav-link">EStrategias</a>
+                    <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -76,7 +76,7 @@
                     </div>
                     <div class="hero-image">
                         <div class="image-container">
-                            <img src="img/gotin.png" alt="Bebedero Aguita Chida">
+                            <img src="img/gotinApp.png" alt="Bebedero Aguita Chida">
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         </p>
                     </div>
 
-                    <div class="benefit-card bg-light-blue">
+                    <div class="benefit-card bg-yellow">
                         <div class="benefit-icon bg-turquoise">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <circle cx="12" cy="12" r="10"></circle>
@@ -114,7 +114,7 @@
                         </p>
                     </div>
 
-                    <div class="benefit-card bg-coral">
+                    <div class="benefit-card bg-yellow">
                         <div class="benefit-icon bg-orange">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <line x1="12" y1="5" x2="12" y2="19"></line>
@@ -167,7 +167,6 @@
                             azucaradas."
                         </p>
                         <div class="testimonial-author">
-                            <div class="author-avatar bg-green"></div>
                             <div class="author-info">
                                 <h4>María Rodríguez</h4>
                                 <p>Directora, Escuela Primaria Benito Juárez</p>
@@ -181,7 +180,6 @@
                             conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
                         </p>
                         <div class="testimonial-author">
-                            <div class="author-avatar bg-turquoise"></div>
                             <div class="author-info">
                                 <h4>Carlos Mendoza</h4>
                                 <p>Profesor de Ciencias, Colegio Azteca</p>
@@ -191,56 +189,48 @@
 
                     <div class="testimonial-card bg-yellow">
                         <p class="testimonial-text">
-                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
-                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                            "Agüita Chida nos ha facilitado promover hábitos saludables en la comunidad. Ahora nuestros alumnos no solo beben más agua, también están más informados sobre el cuidado del medio ambiente."
                         </p>
                         <div class="testimonial-author">
-                            <div class="author-avatar bg-turquoise"></div>
                             <div class="author-info">
-                                <h4>Carlos Mendoza</h4>
-                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                                <h4>Lucía Hernández</h4>
+                                <p>Coordinadora de Bienestar Escolar, Secundaria Técnica 12</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="testimonial-card bg-yellow">
                         <p class="testimonial-text">
-                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
-                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                            "Antes muchos estudiantes traían refrescos todos los días. Hoy prefieren llenar sus termos en los bebederos. Es un pequeño cambio con grandes beneficios."
                         </p>
                         <div class="testimonial-author">
-                            <div class="author-avatar bg-turquoise"></div>
                             <div class="author-info">
-                                <h4>Carlos Mendoza</h4>
-                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                                <h4>Jorge Ávila</h4>
+                                <p>Subdirector, Secundaria Bicentenario</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="testimonial-card bg-yellow">
                         <p class="testimonial-text">
-                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
-                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                            "El impacto ha sido inmediato. Padres, maestros y alumnos han respondido de forma muy positiva. Agüita Chida es una gran herramienta educativa y ambiental."
                         </p>
                         <div class="testimonial-author">
-                            <div class="author-avatar bg-turquoise"></div>
                             <div class="author-info">
-                                <h4>Carlos Mendoza</h4>
-                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                                <h4>Ana Sofía Ortega</h4>
+                                <p>Presidenta de la Asociación de Padres de Familia, Primaria Niños Héroes</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="testimonial-card bg-yellow">
                         <p class="testimonial-text">
-                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
-                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                            "Agüita Chida ha cambiado la forma en que vemos el consumo de agua en nuestra escuela. Es práctico, ecológico y ha generado un sentido de responsabilidad en los estudiantes."
                         </p>
                         <div class="testimonial-author">
-                            <div class="author-avatar bg-turquoise"></div>
                             <div class="author-info">
-                                <h4>Carlos Mendoza</h4>
-                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                                <h4>Ernesto Ríos</h4>
+                                <p>Encargado de Servicios Escolares, Colegio Nuevo Horizonte</p>
                             </div>
                         </div>
                     </div>
@@ -272,7 +262,6 @@
                         <div class="logo-image">
                             <img src="img/logoBN.png" alt="Aguita Chida Logo">
                         </div>
-                        <span class="logo-text">Aguita Chida</span>
                     </a>
                     <p class="address">
                         Av. Montes Pirineos 770, Lomas de Chapultepec. Miguel Hidalgo, CDMX
