--- a/proposito.html
+++ b/proposito.html
@@ -28,7 +28,7 @@
                     <a href="proposito.html" class="nav-link active">Propósito</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
                     <a href="marca.html" class="nav-link">Nosotros</a>
-                    <a href="estrategias.html" class="nav-link">EStrategias</a>
+                    <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
