--- a/marca.html
+++ b/marca.html
@@ -55,7 +55,7 @@
                     <a href="proposito.html" class="mobile-nav-link">Propósito</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
                     <a href="marca.html" class="mobile-nav-link active">La Marca</a>
-                    <a href="estrategias.html" class="mobile-nav-link">EStrategias</a>
+                    <a href="estrategias.html" class="mobile-nav-link">Estrategias</a>
                 </div>
             </div>
         </div>
