Fix: navbar's text ✏️

--- a/marca.html
+++ b/marca.html
@@ -26,9 +26,9 @@
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
-                    <a href="diseno.html" class="nav-link">Diseño</a>
                     <a href="marca.html" class="nav-link active">Nosotros</a>
-                    <a href="estrategias.html" class="nav-link">EStrategias</a>
+                    <a href="diseno.html" class="nav-link">Diseño</a>
+                    <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -52,9 +52,9 @@
         <div class="mobile-menu hidden" id="mobile-menu">
             <div class="container">
                 <div class="mobile-menu-links">
-                    <a href="proposito.html" class="mobile-nav-link">Propósito</a>
+                    <a href="proposito.html" class="mobile-nav-link active">Propósito</a>
+                    <a href="marca.html" class="mobile-nav-link">Nosotros</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
-                    <a href="marca.html" class="mobile-nav-link active">La Marca</a>
                     <a href="estrategias.html" class="mobile-nav-link">Estrategias</a>
                 </div>
             </div>
