--- a/proposito.html
+++ b/proposito.html
@@ -25,9 +25,9 @@
 
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
-                    <a href="proposito.html" class="nav-link active">Propósito</a>
+                    <a href="proposito.html" class="nav-link">Propósito</a>
+                    <a href="marca.html" class="nav-link active">Nosotros</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
-                    <a href="marca.html" class="nav-link">Nosotros</a>
                     <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
 
@@ -53,9 +53,9 @@
             <div class="container">
                 <div class="mobile-menu-links">
                     <a href="proposito.html" class="mobile-nav-link active">Propósito</a>
+                    <a href="marca.html" class="mobile-nav-link">Nosotros</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
-                    <a href="marca.html" class="mobile-nav-link">La Marca</a>
-                    <a href="estrategias.html" class="mobile-nav-link">EStrategias</a>
+                    <a href="estrategias.html" class="mobile-nav-link">Estrategias</a>
                 </div>
             </div>
         </div>
