--- a/estrategias.html
+++ b/estrategias.html
@@ -26,9 +26,9 @@
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
+                    <a href="marca.html" class="nav-link active">Nosotros</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
-                    <a href="marca.html" class="nav-link">Nosotros</a>
-                    <a href="estrategias.html" class="nav-link active">Estrategias</a>
+                    <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -52,10 +52,10 @@
         <div class="mobile-menu hidden" id="mobile-menu">
             <div class="container">
                 <div class="mobile-menu-links">
-                    <a href="proposito.html" class="mobile-nav-link">Propósito</a>
+                    <a href="proposito.html" class="mobile-nav-link active">Propósito</a>
+                    <a href="marca.html" class="mobile-nav-link">Nosotros</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
-                    <a href="marca.html" class="mobile-nav-link">La Marca</a>
-                    <a href="estrategias.html" class="mobile-nav-link active">EStrategias</a>
+                    <a href="estrategias.html" class="mobile-nav-link">Estrategias</a>
                 </div>
             </div>
         </div>
@@ -177,7 +177,7 @@
                             consumo de agua.
                         </p>
                         <ul class="program-features">
-                            <li><span class="check-icon orange">✓</span> Reto "Cero Botellas"</li>
+                            <li><span class="check-icon orange">✓</span> Retos "Gotin"</li>
                             <li><span class="check-icon orange">✓</span> Concurso de carteles</li>
                             <li><span class="check-icon orange">✓</span> Premios ecológicos</li>
                         </ul>
@@ -306,7 +306,7 @@
                 <p>
                     Únete a las escuelas que ya están haciendo la diferencia. Contáctanos hoy para comenzar el proceso.
                 </p>
-                <button class="btn btn-white">Solicitar información</button>
+                <button class="btn btn-white"><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=contacto@aguitachida.com" target="_blank">Solicitar información</a></button>
             </div>
         </section>
     </main>
