Add: Favicon and Fix: Navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="navbar-content">
                 <!-- Logo -->
-                <a href="index.html" class="navbar-logo">
+                <a href="index.html" class="navbar-logo" id="logo-link">
                     <div class="logo-image">
                         <img src="img/logo-AguitaChida.png" alt="Aguita Chida Logo">
                     </div>
@@ -26,7 +26,7 @@
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
-                    <a href="marca.html" class="nav-link active">Nosotros</a>
+                    <a href="marca.html" class="nav-link">Nosotros</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
                     <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
@@ -49,10 +49,11 @@
         </div>
 
         <!-- Mobile Navigation -->
+
         <div class="mobile-menu hidden" id="mobile-menu">
             <div class="container">
                 <div class="mobile-menu-links">
-                    <a href="proposito.html" class="mobile-nav-link active">Propósito</a>
+                    <a href="proposito.html" class="mobile-nav-link">Propósito</a>
                     <a href="marca.html" class="mobile-nav-link">Nosotros</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
                     <a href="estrategias.html" class="mobile-nav-link">Estrategias</a>
