--- a/proposito.html
+++ b/proposito.html
@@ -26,7 +26,7 @@
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
-                    <a href="marca.html" class="nav-link active">Nosotros</a>
+                    <a href="marca.html" class="nav-link">Nosotros</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
                     <a href="estrategias.html" class="nav-link">Estrategias</a>
                 </div>
